Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99259

vectorcan can not receive and send CAN-FD message

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.2.2
    • SerialBus: CAN Bus
    • None
    • Windows
    • 4bbb35ef4 (dev)

      Issues description:

      vectorcan can not receive and send CAN-FD message

       

      Root cause:

      In conclude , wrong APIs used in startRead() and startWrite() in vectorcanbackend.cpp.

      You can see details in my topic on qt forum :

      https://forum.qt.io/topic/132636/opensurce-qt6-2-vectorcan-can-not-receive-and-send-can-fd-message

       

      Look forward to you reply .

      Best Regards//Hengtai

      Email:1904719059@qq.com

       

        1. vxlapi.h
          358 kB
          Hengtai Nie
        2. vectorcan_symbols_p_fix.h
          28 kB
          Hengtai Nie
        3. vectorcanbackend_fix.cpp
          24 kB
          Hengtai Nie
        4. vectorcanbackend.cpp
          24 kB
          Hengtai Nie
        5. vectorcan_symbols_p.h
          26 kB
          dongwook Lee
        6. vectorcanbackend-1.cpp
          24 kB
          dongwook Lee
        7. vectorcanbackend-2.cpp
          24 kB
          dongwook Lee
        8. vectorcan_symbols_p-1.h
          26 kB
          dongwook Lee
        9. vectorcanbackend-3.cpp
          24 kB
          dongwook Lee
        10. vectorcan_symbols_p-2.h
          26 kB
          dongwook Lee
        11. vectorcanbackend-4.cpp
          24 kB
          dongwook Lee
        12. qtvectorcanbus.dll
          46 kB
          dongwook Lee
        13. qtvectorcanbus-1.dll
          46 kB
          dongwook Lee
        14. FIXED_vectorcan_symbols_p.h
          26 kB
          dongwook Lee
        15. FIXED_vectorcanbackend.cpp
          24 kB
          dongwook Lee
        For Gerrit Dashboard: QTBUG-99259
        # Subject Branch Project Status CR V

            aha_1980 André Hartmann
            shadow Hengtai Nie
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes