src/plugins/canbus/vectorcan/vectorcanbackend.cpp
@@ -115,6 +115,79 @@ private:
     VectorCanBackendPrivate * const dptr;
 };
 
+XLcanFdConf xlCanFdConfInit(int arbitrationBitRate, int dataBitRate)
+{
+    XLcanFdConf conf = {};
+    const int minArbitrationBitRate = 5000;
+    if (arbitrationBitRate < minArbitrationBitRate) {
+        qCWarning(QT_CANBUS_PLUGINS_VECTORCAN,
+                  "Arbitration bit rate %d is to low (Minimum: %d)",
+                  arbitrationBitRate, minArbitrationBitRate);
+        return conf;
+    }
+    if (dataBitRate < arbitrationBitRate) {
+        qCWarning(QT_CANBUS_PLUGINS_VECTORCAN,
+                  "Data bit rate %d must not be lower than arbitration bit rate %d",
+                  dataBitRate, arbitrationBitRate);
+        return conf;
+    }
+
+    int prescalerArbitration = 1;
+    switch (arbitrationBitRate) {
+    case 5000: prescalerArbitration = 50; break;
+    case 10000: prescalerArbitration = 25; break;
+    case 20000: prescalerArbitration = 20; break;
+    case 33333: prescalerArbitration = 8; break;
+    case 50000: prescalerArbitration = 5; break;
+    case 83333: prescalerArbitration = 3; break;
+    case 100000: prescalerArbitration = 4; break;
+    case 125000: prescalerArbitration = 2; break;
+    }
+    conf.arbitrationBitRate = arbitrationBitRate;
+    const int clock = 80000000;
+    double samplePoint = 0.75;
+    const int btlCyclesAbr = clock / conf.arbitrationBitRate / prescalerArbitration;
+    conf.tseg1Abr = (btlCyclesAbr * samplePoint) - 1;
+    conf.tseg2Abr = btlCyclesAbr * (1 - samplePoint);
+    conf.sjwAbr = conf.tseg2Abr;
+
+    int prescalerData = 1;
+    switch (dataBitRate) {
+    case 25000: prescalerData = 20; break;
+    case 50000: prescalerData = 10; break;
+    case 83333: prescalerData = 6; break;
+    case 100000: prescalerData = 5; break;
+    case 125000: prescalerData = 4; break;
+    case 250000: prescalerData = 2; break;
+    case 8000000: samplePoint = 0.70; break;
+    }
+    conf.dataBitRate = dataBitRate;
+    const int btlCyclesDbr = clock / conf.dataBitRate / prescalerData;
+    conf.tseg1Dbr = (btlCyclesDbr * samplePoint) - 1;
+    conf.tseg2Dbr = btlCyclesDbr * (1 - samplePoint);
+    conf.sjwDbr = conf.tseg2Dbr;
+
+    return conf;
+}
+
+static qsizetype getDlcFromPayloadSize(const qsizetype size)
+{
+    if (size <= 8)
+        return size;
+    if (size <= 12)
+        return 9;
+    if (size <= 16)
+        return 10;
+    if (size <= 20)
+        return 11;
+    if (size <= 24)
+        return 12;
+    if (size <= 32)
+        return 13;
+    if (size <= 48)
+        return 14;
+    return 15;
+}
 
 VectorCanBackendPrivate::VectorCanBackendPrivate(VectorCanBackend *q)
     : q_ptr(q)
@@ -153,14 +226,22 @@ bool VectorCanBackendPrivate::open()
         }
     }
     if (usesCanFd && arbBitRate != 0) {
-        XLcanFdConf xlfdconf = {};
-        xlfdconf.dataBitRate = (dataBitRate != 0) ? dataBitRate : arbBitRate;
-        xlfdconf.arbitrationBitRate = arbBitRate;
+        XLcanFdConf xlfdconf = xlCanFdConfInit(arbBitRate, dataBitRate);
 
         const XLstatus status = ::xlCanFdSetConfiguration(portHandle, channelMask, &xlfdconf);
-        if (Q_UNLIKELY(status != XL_SUCCESS))
-            qCWarning(QT_CANBUS_PLUGINS_VECTORCAN,
-                      "Unable to change the configuration for an open channel");
+        if (Q_UNLIKELY(status != XL_SUCCESS)) {
+            const QString errorString = systemErrorString(status);
+            if (status == XL_ERR_INVALID_ACCESS) {
+                qCWarning(QT_CANBUS_PLUGINS_VECTORCAN, "Unable to change the configuration: %ls.",
+                          qUtf16Printable(errorString));
+                q->setError(errorString, QCanBusDevice::CanBusError::ConfigurationError);
+            } else {
+                qCWarning(QT_CANBUS_PLUGINS_VECTORCAN, "Connection error: %ls.",
+                          qUtf16Printable(errorString));
+                q->setError(errorString, QCanBusDevice::CanBusError::ConnectionError);
+                return false;
+            }
+        }
     }
 
     {
@@ -319,9 +400,11 @@ void VectorCanBackendPrivate::startWrite()
         if (frame.hasExtendedFrameFormat())
             msg.id |= XL_CAN_EXT_MSG_ID;
 
-        msg.dlc = payloadSize;
+        msg.dlc = static_cast<quint8>(getDlcFromPayloadSize(payloadSize));
         if (frame.hasFlexibleDataRateFormat())
             msg.flags = XL_CAN_TXMSG_FLAG_EDL;
+        if (frame.hasBitrateSwitch())
+            msg.flags |= XL_CAN_TXMSG_FLAG_BRS;
         if (frame.frameType() == QCanBusFrame::RemoteRequestFrame)
             msg.flags |= XL_CAN_TXMSG_FLAG_RTR; // we do not care about the payload
         else
@@ -382,10 +465,22 @@ void VectorCanBackendPrivate::startRead()
 
             const XL_CAN_EV_RX_MSG &msg = event.tagData.canRxOkMsg;
 
+            int dataLength = msg.dlc;
+            switch (msg.dlc) {
+            case 9: dataLength = 12; break;
+            case 10: dataLength = 16; break;
+            case 11: dataLength = 20; break;
+            case 12: dataLength = 24; break;
+            case 13: dataLength = 32; break;
+            case 14: dataLength = 48; break;
+            case 15: dataLength = 64; break;
+            }
+
             QCanBusFrame frame(msg.id & ~XL_CAN_EXT_MSG_ID,
-                QByteArray(reinterpret_cast<const char *>(msg.data), int(msg.dlc)));
+                QByteArray(reinterpret_cast<const char *>(msg.data), dataLength));
             frame.setTimeStamp(QCanBusFrame::TimeStamp::fromMicroSeconds(event.timeStamp / 1000));
             frame.setExtendedFrameFormat(msg.id & XL_CAN_EXT_MSG_ID);
+            frame.setBitrateSwitch(msg.flags & XL_CAN_RXMSG_FLAG_BRS);
             frame.setFrameType((msg.flags & XL_CAN_RXMSG_FLAG_RTR)
                                 ? QCanBusFrame::RemoteRequestFrame
                                 : (msg.flags & XL_CAN_RXMSG_FLAG_EF)
